sistemo pattern e logo

--- a/index.html
+++ b/index.html
@@ -11,7 +11,9 @@
 
     <body>
 
-        <header id="header-pattern"></header>
+        <header id="header-pattern">
+            <img src="img/logo.svg" alt="Logo the Booleaner">
+        </header>
 
         <div class="container">
 
