aggiunti commenti per orientarsi

--- a/index.html
+++ b/index.html
@@ -11,9 +11,11 @@
 
     <body>
 
+        <!-- Testa articolo con logo e pattern di sfondo -->
         <header id="header-pattern">
             <img src="img/logo.svg" alt="Logo the Booleaner">
         </header>
+        <!-- Fine testa -->
 
         <div class="container">
 
