Contenuto e stile container-header

--- a/index.html
+++ b/index.html
@@ -17,10 +17,18 @@
         </header>
         <!-- Fine testa -->
 
+        <!-- Creo un container che contenga tutta la pagina, ad eccezione dell'area logo+pattern che rimarrà fissa - questo mi aiuterà anche a svolgere la parte "bonus" dell'esercizio -->
         <div class="container">
 
+            <!-- Inserisco titolo, autore e data in un altro header che a mio avviso è semanticamente corretto -->
             <header>
-
+                <div id="header-title">
+                    <h1>Internet deve essere al servizio del "bene pubblico": il manifesto di Tim Berners-Lee</h1>
+                    <span class="author">Scritto da <span class="author-name">The Booleaner</span></span>
+                    <!-- Utilizzo br per andare a capo -->
+                    <br>
+                    <span class="author date">il 10/10/2020</span>
+                </div>
             </header>
 
             <main>
