--- a/index.html
+++ b/index.html
@@ -32,8 +32,98 @@
             </header>
 
             <main>
-                <section></section>
-                <section></section>
+                <!-- Sezione foto -->
+                <section>
+                    <div class="photos">
+                        <img src="img/tim-1.jpg" alt="Foto di Tim Berners-Lee 1">
+                        <img src="img/tim-2.jpg" alt="Foto di Tim Berners-Lee 2">
+                        <!-- Utilizzo h6 e non p perché section per essere corretto deve contenere almeno un tag h -->
+                        <h6>
+                            1st Photo: jhon S. and James L., Knight Foundation, by Soul Henrichsen
+                        </h6>
+                        <h6>
+                            2nd Photo: Wikimedia by Paul Clarke
+                        </h6>
+                    </div>
+                </section>
+
+                <!-- Avrei potuto utilizzare article qua? -->
+                <section>
+                    <!-- Il contenuto dovrebbe avere almeno un h per essere semanticamente corretto -->
+                    <div class="content">
+                        <!-- Paragrafo -->
+                        <p>
+                            Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolorum quae dignissimos eum nobis
+                            sequi aut ullam repellat, sit neque illo fugit corporis asperiores saepe molestias nam
+                            veniam amet minima! Quibusdam?
+                            Fugit ducimus reiciendis minus quibusdam reprehenderit! Hic error quisquam exercitationem
+                            dignissimos a quidem dolore fuga tenetur perferendis porro! Numquam vitae perspiciatis iure
+                            adipisci ad praesentium nobis distinctio commodi explicabo. Voluptas!
+                            Error architecto perspiciatis delectus est eaque ullam repellendus et doloremque molestiae
+                            vero laboriosam placeat mollitia, incidunt recusandae quidem ea autem qui eos provident
+                            laborum, totam minima ipsa nemo! Deleniti, itaque.
+                        </p>
+                    </div>
+                </section>
+
+                <section>
+                    <div class="content">
+                        <!-- Lista -->
+                        <ul>
+                            <li>Lorem ipsum dolor sit amet consectetur adipisicing elit. Temporibus hic assumenda nisi
+                                quas tempora voluptatem voluptates. Voluptates recusandae iusto, sequi eum odit quae
+                                asperiores eaque deleniti et, esse explicabo sint.</li>
+                            <li>Lorem ipsum dolor sit amet consectetur adipisicing elit. Vel, animi eius beatae
+                                perspiciatis ipsam quod. Excepturi quaerat omnis placeat ipsum sint, perferendis, nisi,
+                                quos rerum exercitationem minima hic quo amet.</li>
+                            <li>Lorem ipsum dolor sit amet consectetur adipisicing elit. Praesentium explicabo nulla
+                                incidunt quibusdam vel minima eligendi at id ex? Hic beatae doloremque esse magnam, vero
+                                voluptas maxime molestiae nostrum vitae?</li>
+                        </ul>
+                    </div>
+                </section>
+
+                <section>
+                    <div class="content">
+                        <!-- Tabella -->
+                        <table>
+                            <thead>
+                                <tr>
+                                    <th>Lorem, ipsum dolor.</th>
+                                    <th>Lorem, ipsum dolor.</th>
+                                    <th class="third-cell">Lorem, ipsum dolor.</th>
+                                </tr>
+                            </thead>
+
+                            <tbody>
+                                <tr>
+                                    <td>Lorem, ipsum dolor.</td>
+                                    <td>Lorem, ipsum dolor.</td>
+                                    <td class="third-cell">Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                                        Quaerat est fugit vel
+                                        exercitationem voluptatum harum nisi dolor eius beatae consequatur iste eveniet
+                                        quisquam praesentium laudantium, ex maiores amet illum nemo.</td>
+                                </tr>
+                                <tr>
+                                    <td>Lorem, ipsum dolor.</td>
+                                    <td>Lorem, ipsum dolor.</td>
+                                    <td class="third-cell">Lorem ipsum, dolor sit amet consectetur adipisicing elit.
+                                        Amet, quasi. Sapiente
+                                        enim obcaecati aut, quae blanditiis suscipit accusamus praesentium a laborum
+                                        adipisci aspernatur quibusdam, illum rerum repudiandae aliquid ipsa non.</td>
+                                </tr>
+                                <tr>
+                                    <td>Lorem, ipsum dolor.</td>
+                                    <td>Lorem, ipsum dolor.</td>
+                                    <td class="third-cell">Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                                        Alias aliquid fuga, est
+                                        reiciendis quasi laudantium error atque enim tempore ab consectetur repellat
+                                        corporis dicta dignissimos, delectus vel nostrum cupiditate nihil.</td>
+                                </tr>
+                            </tbody>
+                        </table>
+                    </div>
+                </section>
             </main>
 
             <footer></footer>
