sistemato table e aggiunto testo evidenziato

--- a/index.html
+++ b/index.html
@@ -57,7 +57,8 @@
                             sequi aut ullam repellat, sit neque illo fugit corporis asperiores saepe molestias nam
                             veniam amet minima! Quibusdam?
                             Fugit ducimus reiciendis minus quibusdam reprehenderit! Hic error quisquam exercitationem
-                            dignissimos a quidem dolore fuga tenetur perferendis porro! Numquam vitae perspiciatis iure
+                            dignissimos a quidem dolore fuga <span class="yellow-content">tenetur perferendis
+                                porro!</span> Numquam vitae perspiciatis iure
                             adipisci ad praesentium nobis distinctio commodi explicabo. Voluptas!
                             Error architecto perspiciatis delectus est eaque ullam repellendus et doloremque molestiae
                             vero laboriosam placeat mollitia, incidunt recusandae quidem ea autem qui eos provident
@@ -96,7 +97,7 @@
                             </thead>
 
                             <tbody>
-                                <tr>
+                                <tr class="aqua-row">
                                     <td>Lorem, ipsum dolor.</td>
                                     <td>Lorem, ipsum dolor.</td>
                                     <td class="third-cell">Lorem ipsum dolor sit amet consectetur adipisicing elit.
@@ -112,7 +113,7 @@
                                         enim obcaecati aut, quae blanditiis suscipit accusamus praesentium a laborum
                                         adipisci aspernatur quibusdam, illum rerum repudiandae aliquid ipsa non.</td>
                                 </tr>
-                                <tr>
+                                <tr class="aqua-row">
                                     <td>Lorem, ipsum dolor.</td>
                                     <td>Lorem, ipsum dolor.</td>
                                     <td class="third-cell">Lorem ipsum dolor sit amet consectetur adipisicing elit.
