sistemati commenti e sezioni

--- a/index.html
+++ b/index.html
@@ -48,10 +48,10 @@
                 </section>
 
                 <!-- Avrei potuto utilizzare article qua? -->
+                <!-- Sezione Paragrafo 1 -->
                 <section>
                     <!-- Il contenuto dovrebbe avere almeno un h per essere semanticamente corretto -->
-                    <div class="content">
-                        <!-- Paragrafo -->
+                    <div>
                         <p>
                             Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolorum quae dignissimos eum nobis
                             sequi aut ullam repellat, sit neque illo fugit corporis asperiores saepe molestias nam
@@ -67,9 +67,9 @@
                     </div>
                 </section>
 
+                <!-- Sezione lista -->
                 <section>
-                    <div class="content">
-                        <!-- Lista -->
+                    <div>
                         <ul>
                             <li>Lorem ipsum dolor sit amet consectetur adipisicing elit. Temporibus hic assumenda nisi
                                 quas tempora voluptatem voluptates. Voluptates recusandae iusto, sequi eum odit quae
@@ -84,9 +84,9 @@
                     </div>
                 </section>
 
+                <!-- Sezione tabella -->
                 <section>
-                    <div class="content">
-                        <!-- Tabella -->
+                    <div>
                         <table>
                             <thead>
                                 <tr>
@@ -125,9 +125,32 @@
                         </table>
                     </div>
                 </section>
+
+                <!-- Sezione Paragrafo 2 -->
+                <section>
+                    <div>
+                        <p>
+                            Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolorum quae dignissimos eum nobis
+                            sequi aut ullam repellat, sit neque illo fugit corporis asperiores saepe molestias nam
+                            veniam amet minima! Quibusdam?
+                            Fugit ducimus reiciendis minus quibusdam reprehenderit! Hic error quisquam exercitationem
+                            dignissimos a quidem dolore fuga tenetur perferendis
+                            porro! Numquam vitae perspiciatis iure
+                            adipisci ad praesentium nobis distinctio commodi explicabo. Voluptas!
+                            Error architecto perspiciatis delectus est eaque ullam repellendus et doloremque molestiae
+                            vero laboriosam placeat mollitia, <span class="yellow-content">incidunt recusandae quidem ea
+                                autem qui eos provident
+                                laborum, totam minima ipsa nemo!</span> Deleniti, itaque.
+                        </p>
+                    </div>
+                </section>
             </main>
 
-            <footer></footer>
+            <footer>
+                <div>
+                    <h3>Potrebbero interessarti</h3>
+                </div>
+            </footer>
 
         </div>
 
