completamento contenuto e stile

--- a/index.html
+++ b/index.html
@@ -149,6 +149,8 @@
             <footer>
                 <div>
                     <h3>Potrebbero interessarti</h3>
+                    <p id="monitor">Lorem, ipsum dolor.</p>
+                    <p id="graph">Lorem, ipsum dolor.</p>
                 </div>
             </footer>
 
