--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>The Booleaner</title>
-        <link rel="stylesheet" href="css/style.css">
+        <link rel="stylesheet" href="css/style2.css">
     </head>
 
     <body>
@@ -35,8 +35,10 @@
                 <!-- Sezione foto -->
                 <section>
                     <div class="photos">
-                        <img src="img/tim-1.jpg" alt="Foto di Tim Berners-Lee 1">
-                        <img src="img/tim-2.jpg" alt="Foto di Tim Berners-Lee 2">
+                        <div class="photo-img">
+                            <img src="img/tim-1.jpg" alt="Foto di Tim Berners-Lee 1">
+                            <img src="img/tim-2.jpg" alt="Foto di Tim Berners-Lee 2">
+                        </div>
                         <!-- Utilizzo h6 e non p perché section per essere corretto deve contenere almeno un tag h -->
                         <h6>
                             1st Photo: jhon S. and James L., Knight Foundation, by Soul Henrichsen
@@ -147,8 +149,8 @@
             </main>
 
             <footer>
+                <h3>Potrebbero interessarti</h3>
                 <div>
-                    <h3>Potrebbero interessarti</h3>
                     <p id="monitor">Lorem, ipsum dolor.</p>
                     <p id="graph">Lorem, ipsum dolor.</p>
                 </div>
