--- a/index.html
+++ b/index.html
@@ -161,3 +161,5 @@
     </body>
 
 </html>
+
+<!-- Validato con https://validator.w3.org/ - tutto ok, a parte gli warning sulle section per la mancata presenza di tag h, come segnalato nei commenti-->
