--- a/index.html
+++ b/index.html
@@ -13,7 +13,10 @@
 
         <!-- Testa articolo con logo e pattern di sfondo -->
         <header id="header-pattern">
-            <img src="img/logo.svg" alt="Logo the Booleaner">
+            <div class="logo">
+                <img src="img/logo.svg" alt="Logo the Booleaner">
+            </div>
+            <div class="layover"></div>
         </header>
         <!-- Fine testa -->
 
