--- a/index.html
+++ b/index.html
@@ -42,15 +42,17 @@
                     <div class="photos">
                         <div class="photo-img">
                             <img src="img/tim-1.jpg" alt="Foto di Tim Berners-Lee 1">
+                            <h6>
+                                1st Photo: jhon S. and James L., Knight Foundation, by Soul Henrichsen
+                            </h6>
+                        </div>
+                        <div class="photo-img">
                             <img src="img/tim-2.jpg" alt="Foto di Tim Berners-Lee 2">
+                            <h6>
+                                2nd Photo: Wikimedia by Paul Clarke
+                            </h6>
                         </div>
                         <!-- Utilizzo h6 e non p perché section per essere corretto deve contenere almeno un tag h -->
-                        <h6>
-                            1st Photo: jhon S. and James L., Knight Foundation, by Soul Henrichsen
-                        </h6>
-                        <h6>
-                            2nd Photo: Wikimedia by Paul Clarke
-                        </h6>
                     </div>
                 </section>
 
