index2 x style2.css e ripristinato index x style.css

--- a/index2.html
+++ b/index2.html
@@ -6,7 +6,7 @@
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>The Booleaner</title>
-        <link rel="stylesheet" href="css/style.css">
+        <link rel="stylesheet" href="css/style2.css">
     </head>
 
     <body>
@@ -39,16 +39,20 @@
             <main>
                 <!-- Sezione foto -->
                 <section>
-                    <div class="photo-img">
-                        <img src="img/tim-1.jpg" alt="Foto di Tim Berners-Lee 1">
-                        <img src="img/tim-2.jpg" alt="Foto di Tim Berners-Lee 2">
+                    <div class="photos">
+                        <div class="photo-img">
+                            <img src="img/tim-1.jpg" alt="Foto di Tim Berners-Lee 1">
+                            <h6>
+                                1st Photo: jhon S. and James L., Knight Foundation, by Soul Henrichsen
+                            </h6>
+                        </div>
+                        <div class="photo-img">
+                            <img src="img/tim-2.jpg" alt="Foto di Tim Berners-Lee 2">
+                            <h6>
+                                2nd Photo: Wikimedia by Paul Clarke
+                            </h6>
+                        </div>
                         <!-- Utilizzo h6 e non p perché section per essere corretto deve contenere almeno un tag h -->
-                        <h6>
-                            1st Photo: jhon S. and James L., Knight Foundation, by Soul Henrichsen
-                        </h6>
-                        <h6>
-                            2nd Photo: Wikimedia by Paul Clarke
-                        </h6>
                     </div>
                 </section>
 
