--- a/index2.html
+++ b/index2.html
@@ -38,6 +38,7 @@
 
             <main>
                 <!-- Sezione foto -->
+                <!-- Qua c'è una piccola differenza rispetto a index, per questo ho dovuto fare un nuovo file -->
                 <section>
                     <div class="photos">
                         <div class="photo-img">
