ripristino per style 1

--- a/index.html
+++ b/index.html
@@ -12,11 +12,10 @@
     <body>
 
         <!-- Testa articolo con logo e pattern di sfondo -->
-        <header id="header-pattern">
-            <div class="logo">
+        <header>
+            <div id="header-pattern">
                 <img src="img/logo.svg" alt="Logo the Booleaner">
             </div>
-            <div class="layover"></div>
         </header>
         <!-- Fine testa -->
 
