--- a/index.html
+++ b/index.html
@@ -22,20 +22,22 @@
         <!-- Creo un container che contenga tutta la pagina, ad eccezione dell'area logo+pattern che rimarrà fissa - questo mi aiuterà anche a svolgere la parte "bonus" dell'esercizio -->
         <div class="container">
 
-            <!-- Inserisco titolo, autore e data in un altro header che a mio avviso è semanticamente corretto -->
-            <header>
-                <div id="header-title">
-                    <div class="title-container">
-                        <h1>Internet deve essere al servizio del "bene pubblico": il manifesto di Tim Berners-Lee</h1>
-                        <span class="author">Scritto da <span class="author-name">The Booleaner</span></span>
-                        <!-- Utilizzo br per andare a capo -->
-                        <br>
-                        <span class="author date">il 10/10/2020</span>
-                    </div>
-                </div>
-            </header>
-
+            <!-- Ho spostato main sopra a header altrimenti non sarebbe stato corretto perché avrei avuto due header di seguito in quanto il div non ha significato semantico -->
             <main>
+                <!-- Inserisco titolo, autore e data in un altro header che a mio avviso è semanticamente corretto -->
+                <header>
+                    <div id="header-title">
+                        <div class="title-container">
+                            <h1>Internet deve essere al servizio del "bene pubblico": il manifesto di Tim Berners-Lee
+                            </h1>
+                            <span class="author">Scritto da <span class="author-name">The Booleaner</span></span>
+                            <!-- Utilizzo br per andare a capo -->
+                            <br>
+                            <span class="author date">il 10/10/2020</span>
+                        </div>
+                    </div>
+                </header>
+
                 <!-- Sezione foto -->
                 <section>
                     <div class="photo-img">
