--- a/index.html
+++ b/index.html
@@ -149,10 +149,12 @@
 
             <footer>
                 <h3>Potrebbero interessarti</h3>
-                <div>
-                    <p id="monitor">Lorem, ipsum dolor.</p>
-                    <p id="graph">Lorem, ipsum dolor.</p>
-                </div>
+                <article id="monitor">
+                    <a href="#">Lorem, ipsum dolor.</a>
+                </article>
+                <article id="graph">
+                    <a href="#">Lorem, ipsum dolor.</a>
+                </article>
             </footer>
 
         </div>
